--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,7 @@ h1,h2,h3,h4,h5,h6 {
 	color:#333;
 	line-height:1.4;
 	font-weight:600;
+	text-align: center;
 }
 
 a,a:hover {
@@ -771,6 +772,7 @@ textarea.contact {
 @media screen and (min-width:768px) {
 	input.contact.col-md-6 {
 		width: 48.5%;
+		text-align: center;
 	}
 }
 /* --- Footer --- */
